# marketplace

./: .env.example  .gitignore  CLAUDE.md  DB_SCHEMA.md  README.md  ROADMAP.md  pyproject.toml
.claude-plugin/: marketplace.json
docker/: docker-compose.yml
docker/mcp/: Dockerfile  requirements.txt
docker/mcp/server/: config.py  db.py  embedder.py  graph_builder.py  ingestion.py  main.py  schema.py
docker/mcp/server/tools/: code_fetch.py  graph_tools.py
installer/: cli.py  doctor.py  manifest.py
installer/targets/: claude.py  codex.py
market-mem/: README.md  docker-compose.yml
market-mem/mcp/: requirements.txt
market-mem/mcp/server/: config.py  embedder.py  group_id.py  ingestion.py
market-mem/mcp/server/tools/: code_search.py  memory_search.py  memory_write.py
plugins/memory/: .mcp.json
plugins/memory/.claude-plugin/: plugin.json
plugins/memory/hooks/: _haiku.py  _lib.py  hooks.json  post_tool_use.py  session_end.py  session_start.py  stop.py  subagent_stop.py
