[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mem"
version = "0.1.0"
description = "Installer CLI for the memory marketplace plugin"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
mem = "installer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["installer*"]
